# pytexas2024-plugins

./: .gitignore  .pdm-python  README.md  mkdocs.yml  pyproject.toml
docs/: 1_plugins.md  2_requirements_and_design.md  3_plugin_class_and_events.md  3_plugin_decorator.md  4_finding_plugins.md  5_the_main_event.md  5_the_plugins.md  6_references.md  6_the_main_event.md  index.md
docs/bonus/: 1_events.md
sample/: bar.info  file1.txt  file2.txt  foo  table1.csv
src/: fileinfo_csv_plugin.py  fileinfo_text_plugin.py
src/fileinfo/: __main__.py  plugins.py
